PROJECT(FeatherPolygon) # put in the project name here

CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

FIND_PACKAGE(Qt5OpenGL REQUIRED)

SET(QT_USE_OPENGL TRUE)

# RELEASE VERSION
#SET(CMAKE_BUILD_TYPE=Release)
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

# DEBUG VERSION
#SET(CMAKE_BUILD_TYPE=Debug)
#SET(CMAKE_CXX_FLAGS "-ggdb -Wall")
#SET(CMAKE_CXX_FLAGS_RELEASE "-O0")
#SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE=Profile)

SET(CMAKE_CXX_FLAGS "-g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_LINK_FLAGS "-ldl")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(images)
